se completo la parte de Html

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <!-- el main es para agrupar el contenido mas importante de la pag -->
     <main>
       <!-- el section sirve para dividir el main en secciones por temas -->
+      <!-- EL PRIMER SECTION ES PARA LA PRESENTACION INICIAL -->
       <section id="inicio" class="hero">
-        <div class="hero_Content" style="border: 1px solid rgb(0, 0, 0)">
-          <div class="hero_text" style="border: 1px solid rgb(0, 255, 0)">
+        <div class="hero-Content">
+          <div class="hero-text">
             <h1>DEIVYD STEVEN PORTILLO BAQUERO</h1>
             <h2>Estudiante Analisis y Desarrollo de Software</h2>
             <p>
@@ -53,8 +54,120 @@
           </div>
         </div>
       </section>
+      <!-- SEGUNDO SECTION PARA PARTE DE EXPERIENCIA -->
+      <section id="experiencia" class="experiencia">
+        <h2 class="section-title">Experiencia Laboral</h2>
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <span class="date">2025 - actualidad</span>
+              <h3>Estudiante de ADSO</h3>
+              <h4>Estudiante del Servicio Nacional de Aprendizaje SENA</h4>
+              <p>
+                Desarrolador y aprendiz de paginas web usando html, css y
+                javaScript
+              </p>
+              <ul class="skill">
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JAVASCRIPT</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- TERCER SECTION PARA PARTE DE PROYECTOS -->
+      <section id="proyectos" class="project">
+        <h2>Proyectos Personales</h2>
+        <div class="project-contenedor">
+          <div class="project-card">
+            <div class="project-img">
+              <img src="images/reloj.jpg" alt="APP DE RELOJ DIJITAL" />
+            </div>
+            <div class="project-info">
+              <h3>NOMBRE DE APP O PROYECTO</h3>
+              <p>DESCRIPCION, FUNCION, PROPOSITO, ETC...</p>
+            </div>
+            <div class="project-tech">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JAVASCRIPT</span>
+            </div>
+            <div class="project-link">
+              <a href="" target="_blank"><i class="fas fa-link"></i>DEMO</a>
+              <a
+                href="https://github.com/steven-portillo/MI_PORTAFOLIO"
+                target="_blank"
+                ><i class="fab fa-github"></i>CODIGO</a
+              >
+            </div>
+          </div>
+          <div class="project-card">
+            <div class="project-img">
+              <img src="images/calcu.jpg" alt="IMAGEN CALCULADORA" />
+            </div>
+            <div class="project-info">
+              <h3>NOMBRE DE APP O PROYECTO</h3>
+              <p>DESCRIPCION, FUNCION, PROPOSITO, ETC...</p>
+            </div>
+            <div class="project-tech">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JAVASCRIPT</span>
+            </div>
+            <div class="project-link">
+              <a href="" target="_blank"><i class="fas fa-link"></i>DEMO</a>
+              <a
+                href="https://github.com/steven-portillo/MI_PORTAFOLIO"
+                target="_blank"
+                ><i class="fab fa-github"></i>CODIGO</a
+              >
+            </div>
+          </div>
+          <div class="project-card">
+            <div class="project-img">
+              <img
+                src="images/ppt.png"
+                alt="APP DE JUEGO PIEDRA PAPEL TIJERA"
+              />
+            </div>
+            <div class="project-info">
+              <h3>NOMBRE DE APP O PROYECTO</h3>
+              <p>DESCRIPCION, FUNCION, PROPOSITO, ETC...</p>
+            </div>
+            <div class="project-tech">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JAVASCRIPT</span>
+            </div>
+            <div class="project-link">
+              <a href="" target="_blank"><i class="fas fa-link"></i>DEMO</a>
+              <a
+                href="https://github.com/steven-portillo/MI_PORTAFOLIO"
+                target="_blank"
+                ><i class="fab fa-github"></i>CODIGO</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- el footer es para el pie de pagina la parte de abajo con derechos de autor y demas -->
-    <footer style="border: 1px solid rgb(255, 0, 0)"></footer>
+    <footer>
+      <div class="footer-content">
+        <p>&copy; 2025 Deivyd Portillo - Todos los derechos reservados</p>
+        <div class="social_link">
+          <a href="https://github.com/steven-portillo" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://www.facebook.com/deivyd.spb.2025" target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
+          <a href="https://wa.me/573212442618" target="_blank"
+            ><i class="fab fa-whatsapp"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
