--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="project-card">
             <div class="project-img">
               <img
-                src="images/ppt.png"
+                src="images/juego.jpg"
                 alt="APP DE JUEGO PIEDRA PAPEL TIJERA"
               />
             </div>
