algunos cambios que faltaban al html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- el section sirve para dividir el main en secciones por temas -->
       <!-- EL PRIMER SECTION ES PARA LA PRESENTACION INICIAL -->
       <section id="inicio" class="hero">
-        <div class="hero-Content">
+        <div class="hero-content">
           <div class="hero-text">
             <h1>DEIVYD STEVEN PORTILLO BAQUERO</h1>
             <h2>Estudiante Analisis y Desarrollo de Software</h2>
@@ -37,7 +37,7 @@
               temas de desarrollo de software, decidido a mejorar y seguir
               aprendiendo de manera Autodidacta.
             </p>
-            <div class="social_link">
+            <div class="social-link">
               <a href="https://github.com/steven-portillo" target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
@@ -48,8 +48,9 @@
                 ><i class="fab fa-whatsapp"></i
               ></a>
             </div>
+            <a href="#contacto" class="btn" target="_blank">Contactame</a>
           </div>
-          <div class="hero_imagen">
+          <div class="hero-imagen">
             <img src="images/foto.jpg" alt="foto perfil darth vader" />
           </div>
         </div>
@@ -74,11 +75,26 @@
               </ul>
             </div>
           </div>
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <span class="date">fecha a fecha</span>
+              <h3>titulo profesion</h3>
+              <h4>labor a realizar</h4>
+              <p>
+                parrafo descriptivo acerca el tipo  de trabajo y lenguajes usados o tecnologias manejadas
+              </p>
+              <ul class="skill">
+                <li>1skill</li>
+                <li>2skill</li>
+                <li>3skill</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <!-- TERCER SECTION PARA PARTE DE PROYECTOS -->
       <section id="proyectos" class="project">
-        <h2>Proyectos Personales</h2>
+        <h2 class="section-title">Proyectos Personales</h2>
         <div class="project-contenedor">
           <div class="project-card">
             <div class="project-img">
