--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
               <h3>titulo profesion</h3>
               <h4>labor a realizar</h4>
               <p>
-                parrafo descriptivo acerca el tipo  de trabajo y lenguajes usados o tecnologias manejadas
+                parrafo descriptivo acerca el tipo de trabajo y lenguajes usados
+                o tecnologias manejadas
               </p>
               <ul class="skill">
                 <li>1skill</li>
@@ -172,7 +173,7 @@
     <footer>
       <div class="footer-content">
         <p>&copy; 2025 Deivyd Portillo - Todos los derechos reservados</p>
-        <div class="social_link">
+        <div class="social-link">
           <a href="https://github.com/steven-portillo" target="_blank"
             ><i class="fab fa-github"></i
           ></a>
